## Process this file with automake to produce Makefile.in

# $Id: Makefile.am 1067 2004-05-18 10:25:51Z stefan $

noinst_LIBRARIES = libtoolbox.a

libtoolbox_a_SOURCES = \
	avl.c \
	avl.h \
	memory.c \
	memory.h \
	logging.c \
	logging.h \
	chain.c \
	chain.h \
	tree.c \
	tree.h \
	list.c \
	list.h

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/jit -I$(top_srcdir)/jit/@ARCH_DIR@


## Local variables:
## mode: Makefile
## indent-tabs-mode: t
## c-basic-offset: 4
## tab-width: 8
## compile-command: "automake --add-missing"
## End:
