## Process this file with automake to produce Makefile.in

# $Id: Makefile.am 1621 2004-11-30 13:06:55Z twisti $

INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/vm/jit/@ARCH_DIR@

noinst_LIBRARIES = libtoolbox.a

libtoolbox_a_SOURCES = \
	avl.c \
	logging.c \
	chain.c \
	tree.c \
	list.c


## Local variables:
## mode: Makefile
## indent-tabs-mode: t
## c-basic-offset: 4
## tab-width: 8
## compile-command: "automake --add-missing"
## End:
